; ModuleID = '/home/carl/AnghaBench/linux/fs/fuse/extr_dev.c_fuse_drop_waiting.c'
source_filename = "/home/carl/AnghaBench/linux/fs/fuse/extr_dev.c_fuse_drop_waiting.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fuse_conn = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fuse_conn*)* @fuse_drop_waiting to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fuse_drop_waiting(%struct.fuse_conn* %0) #0 {
  %2 = alloca %struct.fuse_conn*, align 8
  store %struct.fuse_conn* %0, %struct.fuse_conn** %2, align 8
  %3 = load %struct.fuse_conn*, %struct.fuse_conn** %2, align 8
  %4 = getelementptr inbounds %struct.fuse_conn, %struct.fuse_conn* %3, i32 0, i32 2
  %5 = call i64 @atomic_dec_and_test(i32* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %17

7:                                                ; preds = %1
  %8 = load %struct.fuse_conn*, %struct.fuse_conn** %2, align 8
  %9 = getelementptr inbounds %struct.fuse_conn, %struct.fuse_conn* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @READ_ONCE(i32 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %17, label %13

13:                                               ; preds = %7
  %14 = load %struct.fuse_conn*, %struct.fuse_conn** %2, align 8
  %15 = getelementptr inbounds %struct.fuse_conn, %struct.fuse_conn* %14, i32 0, i32 0
  %16 = call i32 @wake_up_all(i32* %15)
  br label %17

17:                                               ; preds = %13, %7, %1
  ret void
}

declare dso_local i64 @atomic_dec_and_test(i32*) #1

declare dso_local i32 @READ_ONCE(i32) #1

declare dso_local i32 @wake_up_all(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
